<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/txtMenuNameCustomerBill"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/stringMenu"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.55" />

    <TextView
        android:id="@+id/txtQntyCustomerBill"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/stringQnty"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/txtMenuNameCustomerBill"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.65"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/txtMenuNameCustomerBill"
        app:layout_constraintWidth_percent="0.05" />

    <TextView
        android:id="@+id/txtPriceCustomerBill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stringPrice"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/txtQntyCustomerBill"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtQntyCustomerBill"
        app:layout_constraintWidth_percent="0.2" />

</androidx.constraintlayout.widget.ConstraintLayout>