<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <TextView
            android:id="@+id/txtTableAdminQueue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/stringTable"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.05" />

        <TextView
            android:id="@+id/txtMenuAdminQueue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/stringMenu"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.02"
            app:layout_constraintStart_toEndOf="@+id/txtTableAdminQueue"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.4125" />

        <TextView
            android:id="@+id/txtQntyAdminQueue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/stringQnty"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.02"
            app:layout_constraintStart_toEndOf="@+id/txtMenuAdminQueue"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.05" />


        <TextView
            android:id="@+id/txtStatusAdminQueue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/stringMenuStatus"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.03"
            app:layout_constraintStart_toEndOf="@+id/txtQntyAdminQueue"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.175" />


        <Button
            android:id="@+id/btnUpdateAdminQueue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/stringUPDATE"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnCancelAdminQueue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@android:string/cancel"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.93"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

<!--    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    </androidx.cardview.widget.CardView>-->
</LinearLayout>