<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtMenuAdminBill2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:gravity="start"
                android:padding="16dp"

                android:text="@string/stringMenu"
                android:textSize="20sp"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtQntyAdminBill2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stringQnty"
                android:padding="8dp"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/txtMenuAdminBill2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.65"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/txtMenuAdminBill2" />

            <TextView
                android:id="@+id/txtPriceAdminBill2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stringTotal"
                android:padding="8dp"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/txtMenuAdminBill2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.815"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/txtMenuAdminBill2" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>