<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:background="@android:color/transparent"
        android:elevation="0dp"
        android:padding="4dp"
        app:cardBackgroundColor="#005782A3"
        app:cardElevation="0dp"
        app:strokeColor="#00D60E0E"
        app:strokeWidth="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:elevation="0dp"
            android:padding="6dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stringMenu"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/stringPrice"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtMenu" />


            <TextView
                android:id="@+id/txtQuantity"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:gravity="center"
                android:text="@string/stringQnty"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@+id/cartBtnAdd"
                app:layout_constraintEnd_toStartOf="@+id/cartBtnAdd"
                app:layout_constraintTop_toTopOf="@+id/cartBtnAdd"
                app:layout_constraintVertical_bias="0.5" />

            <Button
                android:id="@+id/cartBtnMinus"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/ic_remove_black_24dp"
                app:layout_constraintBottom_toBottomOf="@+id/cartBtnAdd"
                app:layout_constraintEnd_toStartOf="@+id/txtQuantity"
                app:layout_constraintTop_toTopOf="@+id/cartBtnAdd" />

            <Button
                android:id="@+id/cartBtnAdd"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/ic_add_black_24dp"
                app:layout_constraintBottom_toBottomOf="@+id/txtPrice"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.98"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/txtPrice" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>